noinst_LTLIBRARIES = libldcs_socket.la libldcs_socket_wo_wrapper.la libldcs_pipe.la libldcs_pipe_wo_wrapper.la libldcs_shmem.la libldcs_shmem_wo_wrapper.la

libldcs_socket_la_SOURCES = ldcs_api_socket_wrapper.c ldcs_api_socket.c ldcs_api_util.c ldcs_api.c ldcs_api_listen.c
libldcs_socket_wo_wrapper_la_SOURCES = ldcs_api_socket.c ldcs_api_util.c ldcs_api.c ldcs_api_listen.c
libldcs_pipe_la_SOURCES = ldcs_api_pipe_wrapper.c ldcs_api_pipe.c ldcs_api_pipe_notify.c ldcs_api_util.c ldcs_api.c ldcs_api_listen.c
libldcs_pipe_wo_wrapper_la_SOURCES = ldcs_api_pipe.c ldcs_api_util.c ldcs_api.c ldcs_api_listen.c
libldcs_shmem_la_SOURCES = ldcs_api_shmem_wrapper.c ldcs_api_shmem.c ldcs_api_util.c ldcs_api.c ldcs_api_listen.c 
libldcs_shmem_wo_wrapper_la_SOURCES = ldcs_api_shmem.c ldcs_api_util.c ldcs_api.c ldcs_api_listen.c 
